// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password quality by default 1`] = `
<div
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <label
    className="Label"
    htmlFor="test"
  >
    <span
      className="Label__text"
    >
      Password
    </span>
    <span
      className="Label__required"
    >
      *
    </span>
  </label>
  <input
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    type="password"
    value="Uisi37#8iad"
  />
</div>
`;

exports[`shows password quality when enabled and password is entered 1`] = `
<div
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <label
    className="Label"
    htmlFor="test"
  >
    <span
      className="Label__text"
    >
      Password
    </span>
    <span
      className="Label__required"
    >
      *
    </span>
  </label>
  <input
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    showQuality={true}
    type="password"
    value="Uisi37#8iad"
  />
</div>
`;
